--- a/Document Office .Net/Document Office .Net.csproj
+++ b/Document Office .Net/Document Office .Net.csproj
@@ -66,6 +66,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DOBorder.cs" />
     <Compile Include="DODocumentTemplate.cs" />
     <Compile Include="DOElement.cs" />
     <Compile Include="DOParagraph.cs" />
@@ -82,7 +83,6 @@
     <Compile Include="Forms\EdytorWindow.Designer.cs">
       <DependentUpon>EdytorWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="PhButton.cs" />
     <Compile Include="PhItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
