--- a/Document Office .Net/Document Office .Net.csproj
+++ b/Document Office .Net/Document Office .Net.csproj
@@ -66,6 +66,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DOAbstractElement.cs" />
     <Compile Include="DOBorder.cs" />
     <Compile Include="DODocumentTemplate.cs" />
     <Compile Include="DOElement.cs" />
